@@ -18,7 +18,7 @@ type console struct {
 	config config
 }
 
-func New(config *common.Config, _ int) (outputs.Outputer, error) {
+func New(_ string, config *common.Config, _ int) (outputs.Outputer, error) {
 	c := &console{config: defaultConfig}
 	err := config.Unpack(&c.config)
 	if err != nil {
