@@ -19,12 +19,14 @@ import (
 func ElasticsearchMock(code int, body []byte) *httptest.Server {
 
 	server := httptest.NewServer(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		respCode := code
-		if r.Method == "HEAD" { // send ok on ping
-			respCode = 200
+		if r.URL.Path == "/" { // send ok and a minimal JSON on ping
+			w.WriteHeader(200)
+			w.Header().Set("Content-Type", "application/json")
+			w.Write([]byte(`{"version":{"number":"5.0.0"}}`))
+			return
 		}
 
-		w.WriteHeader(respCode)
+		w.WriteHeader(code)
 		if body != nil {
 			w.Header().Set("Content-Type", "application/json")
 			w.Write(body)
