@@ -24,9 +24,20 @@ type elasticsearchConfig struct {
 }
 
 type Template struct {
-	Name      string `config:"name"`
-	Path      string `config:"path"`
-	Overwrite bool   `config:"overwrite"`
+	Enabled   bool             `config:"enabled"`
+	Name      string           `config:"name"`
+	Path      string           `config:"path"`
+	Overwrite bool             `config:"overwrite"`
+	Versions  TemplateVersions `config:"versions"`
+}
+
+type TemplateVersions struct {
+	Es2x TemplateVersion `config:"2x"`
+}
+
+type TemplateVersion struct {
+	Enabled bool   `config:"enabled"`
+	Path    string `config:"path"`
 }
 
 const (
@@ -46,6 +57,10 @@ var (
 		CompressionLevel: 0,
 		TLS:              nil,
 		LoadBalance:      true,
+		Template: Template{
+			Enabled:  true,
+			Versions: TemplateVersions{Es2x: TemplateVersion{Enabled: true}},
+		},
 	}
 )
 
